--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ body {
     text-decoration: none;
     transition: color 0.3s;
   }
-  .derecha {
-    position: fixed;
+  .barrainferior {
+    position: relative; 
     bottom: 0;
     left: 0;
     width: 100%;
@@ -78,4 +78,8 @@ body {
 }
 .grande {
     font-size: 100px;
+}
+
+main {
+  margin-top: 90px;
 }
