--- a/style.css
+++ b/style.css
@@ -76,28 +76,36 @@ body {
     object-fit: contain;
     
 }
-.grande {
-    font-size: 100px;
+section article img  {
+  width: 400px;
+  
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
+  background-color: #525252;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+section article img:hover {
+  transform: translateY(-10px); /* Eleva la imagen */
+  box-shadow: 7px 7px 10px black; /* Agrega sombra */
 }
 
 .conteiner {
-  width: 400px;
-  margin: 0 auto;
-  padding-top: 81px
+  display: flex;
+  margin-top: 120px;
+  align-items: center;
 }
 
-.conteiner img {
-  margin-top: 10px;
-  background-color: #ef43ff;
-  border: 2px solid black;
-  border-radius: 10px;
-  padding: 4px;
-  transition: box-shadow 0.2s ease;
-
+#TextoBoletin {
+  font-family: "League Spartan";
+  font-size: large;
+  background-color: lightgray;
+  padding: 20px;
+  border-radius: 20px;
 }
-.conteiner img:hover {
-  box-shadow: 0 0.1rem 0.4rem black ;
-}
-
-
 
