--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ header {
         padding: 2rem;
         box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
         transition: transform 0.3s ease, opacity 0.3s ease;
+        z-index: 100;
     }
 
     .nav.visible {
