--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header {
 
 footer{
     background-color: #9d4fb3;
-    text-align: end;
+    text-align: center;
     padding: 1rem;
 }
 .conteiner-all{
@@ -206,5 +206,9 @@ a {
   @media screen and (max-width: 900px) {
     .box {
       margin-top: -14.5rem; 
+    }
+    footer {
+      padding: 0.3rem;
+      font-size: small;
     }
 }
