Fix menu animation

--- a/style.css
+++ b/style.css
@@ -72,14 +72,13 @@ header {
         padding: 2rem;
         box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
         z-index: 100;
-        transition: transform 0.5s ease, opacity 0.3s ease, visibility 0s 0.1s; /* Esta línea */
+        transition: opacity 0.5s ease, visibility 0s 0.1s;
     }
 
     .nav.visible {
         opacity: 1;
         visibility: visible;
-        transform: translateX(0); /* Esta línea */
-
+        transition: opacity 0.4s ease;
     }
     .nav-list {
         flex-direction: column;
