--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header {
         right: 0;
         bottom: 0;
         background-color: #510180;
+        border-radius: 20px 0 0 20px;
         padding: 2rem;
         box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
         z-index: 100;
