--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -15,7 +15,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
-  background-color: #9d4fb3;
+  background-color: #371859;
 }
 
 .logo {
@@ -75,7 +75,7 @@ header {
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: #510180;
+  background-color: #230552;
   border-radius: 20px 0 0 20px;
   padding: 2rem;
   box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
@@ -132,7 +132,7 @@ header {
 }
 
 footer {
-  background-color: #9d4fb3;
+  background-color: #371859;
   text-align: center;
   padding: 1rem;
   color: white;
