--- a/style.css
+++ b/style.css
@@ -257,4 +257,20 @@ footer {
   width: 100%;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 99; /* Debe estar debajo del menú */
+}
+
+.overlay.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
 
